@@ -11,6 +11,7 @@
 - Gdx.files.external on Android now uses app external storage - see wiki article File handling for more information
 - API Addition: Added setProgrammaticChangeEvents to ProgressBar/Slider.
 - Keyboard events working on RoboVM on iOS 13.5 and up, uses same API as on other platforms
+- API Addition: Added AndroidLiveWallpaper.notifyColorsChanged() to communicate visually significant colors back to the wallpaper engine.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
